<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">奋飞词典</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inquiry">查询</string>
    <string name="shore">分享</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="close">确定</string>
    <string name="aboutview">卓海堤版权所有</string>
    <string name="localtrans">本地释义</string>
    <string name="simpletrans">常见释义</string>
    <string name="basictrans">基本释义</string>
    <string name="webtrans">网络释义</string>
    <string name="simpleinfo"></string>
    <string name="etvhint">请输入需要翻译的句子...</string>
</resources>
