<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:background="@drawable/blue">

    <LinearLayout
        android:id="@+id/llayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/layoutbg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:background="@drawable/voice" >
        </ImageButton>

        <AutoCompleteTextView
            android:id="@+id/edit_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:singleLine="true" >
        </AutoCompleteTextView>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:background="@drawable/searchbtn" >
        </Button>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/llayout1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
           		<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="7"
	            android:orientation="vertical" >
		            <TextView
		            android:id="@+id/textView0"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textStyle="bold"
		            android:text="@string/localtrans" />
		            
		             <TextView
		            android:id="@+id/localtrans"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/simpleinfo" />
	            </LinearLayout>
	            <Button
                android:id="@+id/btn_add"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_weight="3"
                android:layout_marginTop="20px"
                android:layout_marginRight="20px"
                android:layout_gravity="start"
                android:background="@drawable/btn_add"
                android:visibility="invisible" >
            </Button>
            </LinearLayout>
            <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/simpletrans" />
            
             <TextView
            android:id="@+id/simpletrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpleinfo" />
            <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/basictrans" />
            
             <TextView
            android:id="@+id/basictrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpleinfo" />
            <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/webtrans" />
            
            <TextView
            android:id="@+id/webtrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpleinfo" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>